--- a/_posts/2019-01-14-Test Blog.md
+++ b/_posts/2019-01-14-Test Blog.md
@@ -1,8 +1,8 @@
 ---
 layout: post
 comments: true
-title: Getting Started With Options Part-1
-categories: [Finance, Option]
+title: 
+categories: [Finance]
 ---
 
-### What are options, futures and stocks?
+### 
